# CXXX

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
cmake/: toolchain-mingw.cmake
examples/: plugin_test.cpp  simple.cpp
src/cli/: main.cpp
src/compiler/: compiler.cpp  compiler.h  scanner.cpp  scanner.h
src/include/: cxxx.h
src/vm/: api.cpp  chunk.cpp  chunk.h  common.h  object.cpp  object.h  stdlib.cpp  table.cpp  table.h  value.cpp  value.h  vm.cpp  vm.h
tests/: CMakeLists.txt  test_api_v2.cpp  test_chunk.cpp  test_closure.cpp  test_comparison.cpp  test_compiler.cpp  test_completion_oop.cpp  test_control_flow.cpp  test_for_scope.cpp  test_functions.cpp  test_nested.cpp  test_oo.cpp  test_scanner.cpp  test_stability_extended.cpp  test_sugar.cpp  test_super.cpp  test_turing.cpp  test_vm.cpp  test_vm_ops.cpp
